# evalia

./: .gitignore  README.md  app.py  pyproject.toml
pages/: 1_📌_Création.py  Création.py  Visualisation.py  visualisation.py
